--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -1875,9 +1875,9 @@ CONFIG_PACKAGE_autosamba_INCLUDE_KSMBD=y
 # CONFIG_PACKAGE_jose is not set
 CONFIG_PACKAGE_libiwinfo-data=y
 # CONFIG_PACKAGE_libjose is not set
-CONFIG_PACKAGE_nginx=y
+# CONFIG_PACKAGE_nginx is not set
 # CONFIG_PACKAGE_nginx-mod-luci-ssl is not set
-CONFIG_PACKAGE_nginx-util=y
+# CONFIG_PACKAGE_nginx-util is not set
 # CONFIG_PACKAGE_tang is not set
 # end of Extra packages
 
@@ -5113,7 +5113,7 @@ CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-light=y
-CONFIG_PACKAGE_luci-nginx=y
+# CONFIG_PACKAGE_luci-nginx is not set
 # CONFIG_PACKAGE_luci-ssl is not set
 # CONFIG_PACKAGE_luci-ssl-nginx is not set
 # CONFIG_PACKAGE_luci-ssl-openssl is not set
@@ -5450,7 +5450,7 @@ CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA is not set
 # CONFIG_PACKAGE_luci-app-ua2f is not set
 # CONFIG_PACKAGE_luci-app-udpxy is not set
-# CONFIG_PACKAGE_luci-app-uhttpd is not set
+CONFIG_PACKAGE_luci-app-uhttpd=y
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic is not set
 # CONFIG_PACKAGE_luci-app-unbound is not set
 CONFIG_PACKAGE_luci-app-upnp=y
@@ -6959,59 +6959,59 @@ CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_microsocks=y
 # CONFIG_PACKAGE_naiveproxy is not set
 # CONFIG_PACKAGE_nginx-all-module is not set
-CONFIG_PACKAGE_nginx-mod-luci=y
-CONFIG_PACKAGE_nginx-ssl=y
+# CONFIG_PACKAGE_nginx-mod-luci is not set
+# CONFIG_PACKAGE_nginx-ssl is not set
 
 #
 # Configuration
 #
 # CONFIG_NGINX_DAV is not set
-CONFIG_NGINX_UBUS=y
+# CONFIG_NGINX_UBUS=y
 # CONFIG_NGINX_FLV is not set
 # CONFIG_NGINX_STUB_STATUS is not set
-CONFIG_NGINX_HTTP_CHARSET=y
-CONFIG_NGINX_HTTP_GZIP=y
-CONFIG_NGINX_HTTP_GZIP_STATIC=y
-CONFIG_NGINX_HTTP_SSI=y
-CONFIG_NGINX_HTTP_USERID=y
-CONFIG_NGINX_HTTP_ACCESS=y
-CONFIG_NGINX_HTTP_AUTH_BASIC=y
+# CONFIG_NGINX_HTTP_CHARSET=y
+# CONFIG_NGINX_HTTP_GZIP=y
+# CONFIG_NGINX_HTTP_GZIP_STATIC=y
+# CONFIG_NGINX_HTTP_SSI=y
+# CONFIG_NGINX_HTTP_USERID=y
+# CONFIG_NGINX_HTTP_ACCESS=y
+# CONFIG_NGINX_HTTP_AUTH_BASIC=y
 # CONFIG_NGINX_HTTP_AUTH_REQUEST is not set
-CONFIG_NGINX_HTTP_AUTOINDEX=y
-CONFIG_NGINX_HTTP_GEO=y
-CONFIG_NGINX_HTTP_MAP=y
-CONFIG_NGINX_HTTP_SPLIT_CLIENTS=y
-CONFIG_NGINX_HTTP_REFERER=y
-CONFIG_NGINX_HTTP_REWRITE=y
-CONFIG_NGINX_HTTP_PROXY=y
-CONFIG_NGINX_HTTP_FASTCGI=y
-CONFIG_NGINX_HTTP_UWSGI=y
-CONFIG_NGINX_HTTP_SCGI=y
-CONFIG_NGINX_HTTP_MEMCACHED=y
-CONFIG_NGINX_HTTP_LIMIT_CONN=y
-CONFIG_NGINX_HTTP_LIMIT_REQ=y
-CONFIG_NGINX_HTTP_EMPTY_GIF=y
-CONFIG_NGINX_HTTP_BROWSER=y
-CONFIG_NGINX_HTTP_UPSTREAM_HASH=y
-CONFIG_NGINX_HTTP_UPSTREAM_IP_HASH=y
-CONFIG_NGINX_HTTP_UPSTREAM_LEAST_CONN=y
-CONFIG_NGINX_HTTP_UPSTREAM_KEEPALIVE=y
-CONFIG_NGINX_HTTP_CACHE=y
-CONFIG_NGINX_HTTP_V2=y
-CONFIG_NGINX_PCRE=y
-CONFIG_NGINX_NAXSI=y
+# CONFIG_NGINX_HTTP_AUTOINDEX=y
+# CONFIG_NGINX_HTTP_GEO=y
+# CONFIG_NGINX_HTTP_MAP=y
+# CONFIG_NGINX_HTTP_SPLIT_CLIENTS=y
+# CONFIG_NGINX_HTTP_REFERER=y
+# CONFIG_NGINX_HTTP_REWRITE=y
+# CONFIG_NGINX_HTTP_PROXY=y
+# CONFIG_NGINX_HTTP_FASTCGI=y
+# CONFIG_NGINX_HTTP_UWSGI=y
+# CONFIG_NGINX_HTTP_SCGI=y
+# CONFIG_NGINX_HTTP_MEMCACHED=y
+# CONFIG_NGINX_HTTP_LIMIT_CONN=y
+# CONFIG_NGINX_HTTP_LIMIT_REQ=y
+# CONFIG_NGINX_HTTP_EMPTY_GIF=y
+# CONFIG_NGINX_HTTP_BROWSER=y
+# CONFIG_NGINX_HTTP_UPSTREAM_HASH=y
+# CONFIG_NGINX_HTTP_UPSTREAM_IP_HASH=y
+# CONFIG_NGINX_HTTP_UPSTREAM_LEAST_CONN=y
+# CONFIG_NGINX_HTTP_UPSTREAM_KEEPALIVE=y
+# CONFIG_NGINX_HTTP_CACHE=y
+# CONFIG_NGINX_HTTP_V2=y
+# CONFIG_NGINX_PCRE=y
+# CONFIG_NGINX_NAXSI=y
 # CONFIG_NGINX_LUA is not set
 # CONFIG_NGINX_HTTP_REAL_IP is not set
 # CONFIG_NGINX_HTTP_SECURE_LINK is not set
 # CONFIG_NGINX_HTTP_SUB is not set
-CONFIG_NGINX_HEADERS_MORE=y
+# CONFIG_NGINX_HEADERS_MORE=y
 # CONFIG_NGINX_HTTP_BROTLI is not set
 # CONFIG_NGINX_STREAM_CORE_MODULE is not set
 # CONFIG_NGINX_RTMP_MODULE is not set
 # CONFIG_NGINX_TS_MODULE is not set
 # end of Configuration
 
-CONFIG_PACKAGE_nginx-ssl-util=y
+# CONFIG_PACKAGE_nginx-ssl-util=y
 # CONFIG_PACKAGE_nginx-ssl-util-nopcre is not set
 CONFIG_PACKAGE_ngrokc=y
 # CONFIG_PACKAGE_phtunnel is not set
@@ -7066,9 +7066,9 @@ CONFIG_SING_BOX_WITH_WIREGUARD=y
 # CONFIG_PACKAGE_trojan-go is not set
 # CONFIG_PACKAGE_tuic-client is not set
 CONFIG_PACKAGE_uhttpd=y
-# CONFIG_PACKAGE_uhttpd-mod-lua is not set
+CONFIG_PACKAGE_uhttpd-mod-lua=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
-# CONFIG_PACKAGE_uhttpd-mod-ucode is not set
+CONFIG_PACKAGE_uhttpd-mod-ucode=y
 CONFIG_PACKAGE_uwsgi=y
 CONFIG_PACKAGE_uwsgi-cgi-plugin=y
 # CONFIG_PACKAGE_uwsgi-logfile-plugin is not set
