--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -4979,7 +4979,7 @@ CONFIG_PACKAGE_libss=y
 # CONFIG_PACKAGE_libstrophe is not set
 # CONFIG_PACKAGE_libsyn123 is not set
 # CONFIG_PACKAGE_libsysrepo is not set
-# CONFIG_PACKAGE_libtalloc is not set
+CONFIG_PACKAGE_libtalloc=y
 CONFIG_PACKAGE_libtasn1=y
 # CONFIG_PACKAGE_libtheora is not set
 # CONFIG_PACKAGE_libtiff is not set
