--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -7137,7 +7137,7 @@ CONFIG_NGINX_HTTP_REFERER=y
 CONFIG_NGINX_HTTP_REWRITE=y
 CONFIG_NGINX_HTTP_PROXY=y
 CONFIG_NGINX_HTTP_FASTCGI=y
-CONFIG_NGINX_HTTP_UWSGI=y
+# CONFIG_NGINX_HTTP_UWSGI is not set
 CONFIG_NGINX_HTTP_SCGI=y
 CONFIG_NGINX_HTTP_MEMCACHED=y
 CONFIG_NGINX_HTTP_LIMIT_CONN=y
@@ -7224,12 +7224,12 @@ CONFIG_PACKAGE_uhttpd=y
 # CONFIG_PACKAGE_uhttpd-mod-lua is not set
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 # CONFIG_PACKAGE_uhttpd-mod-ucode is not set
-CONFIG_PACKAGE_uwsgi=y
-CONFIG_PACKAGE_uwsgi-cgi-plugin=y
+# CONFIG_PACKAGE_uwsgi is not set
+# CONFIG_PACKAGE_uwsgi-cgi-plugin is not set
 # CONFIG_PACKAGE_uwsgi-logfile-plugin is not set
-CONFIG_PACKAGE_uwsgi-luci-support=y
+# CONFIG_PACKAGE_uwsgi-luci-support is not set
 # CONFIG_PACKAGE_uwsgi-python3-plugin is not set
-CONFIG_PACKAGE_uwsgi-syslog-plugin=y
+# CONFIG_PACKAGE_uwsgi-syslog-plugin is not set
 CONFIG_PACKAGE_v2ray-plugin=y
 # CONFIG_PACKAGE_v2raya is not set
 # CONFIG_PACKAGE_vmease is not set
