Clarify config_profile option description
Updated the description for the config_profile option to clarify its usage.

--- a/.github/workflows/通用设备编译固件.yml
+++ b/.github/workflows/通用设备编译固件.yml
@@ -22,13 +22,12 @@ on:
           - immortalwrt-master
           - Lienol-master
       config_profile:
-        description: "Config set (config directory, for parallel testing)"
+        description: "Config set (default = use source branch; test1/test2 = parallel test)"
         required: false
         default: "default"
         type: choice
         options:
           - default
-          - lede-master
           - lede-master-test1
           - lede-master-test2
 
