--- a/.github/workflows/通用设备编译固件.yml
+++ b/.github/workflows/通用设备编译固件.yml
@@ -278,7 +278,7 @@ jobs:
           cd openwrt/bin/targets/*/*
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-          echo "::set-output name=status::success"
+          echo "status=success" >> $GITHUB_OUTPUT
 
       # 将整理后的固件目录打包为 Artifact（仅整理成功时）
       - name: Upload firmware directory
@@ -288,16 +288,16 @@ jobs:
           name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
           path: ${{ env.FIRMWARE }}
 
-      # 编译成功且开启 Release 时：生成 release 标签和 release.txt 正文（含 CowTransfer/WeTransfer 链接占位）
+      # 编译成功且开启 Release 时：生成 release 标签和 release.txt 正文（CowTransfer/WeTransfer 需单独添加 step 后在此引用）
       - name: Generate release tag
         id: tag
         if: ${{ steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled() }}
         run: |
-          echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
+          echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
           touch release.txt
-          [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
-          [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
-          echo "::set-output name=status::success"
+          [ "$UPLOAD_COWTRANSFER" = "true" ] && echo "🔗 CowTransfer 需在 workflow 中先添加上传 step" >> release.txt || true
+          [ "$UPLOAD_WETRANSFER" = "true" ] && echo "🔗 WeTransfer 需在 workflow 中先添加上传 step" >> release.txt || true
+          echo "status=success" >> $GITHUB_OUTPUT
 
       # 编译成功且 tag 已生成时：创建 GitHub Release 并上传固件目录下所有文件
       - name: Upload firmware to release
